Oppgraderer java versjon til 20 (#658)
* Oppgraderer java versjon til 17

* Oppgraderer java versjon til 20

* oppgradering av dependency wip

* fjerner cxf og endrer cucumber steps til ny syntax

* Fjerner poc test

* legger tilbake cucumber.java8 for å kjøre lambda funksjoner

fjerner ignorerte tester som skaper problemer

* ktlint

* ktlintformat

* fjerner ktlint

* fjerner swagger

---------

Co-authored-by: Stian S. Douzette <stians.douzette@nav.no>